{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 8,
  "lineage": "f1a6837b-b9e4-9f18-68ab-701b77e1be61",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0f60e7893679d5586",
            "id": "rtb-0f60e7893679d5586",
            "owner_id": "403053754364",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "rt-jenkins"
            },
            "vpc_id": "vpc-039b4f154ce5ff4c7"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:403053754364:instance/i-087e08f887036efd2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087e08f887036efd2",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "personal_us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0775b84bb2f8ab74e",
            "private_dns": "ip-10-0-1-39.ec2.internal",
            "private_ip": "10.0.1.39",
            "public_ip": "35.172.250.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05f749bbda28415fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e510fac63a2394b7",
            "tags": {
              "Group": "jenkins",
              "Name": "jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09824ce9e4ddb424d"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403053754364:internet-gateway/igw-0873f78a2c0f02f27",
            "id": "igw-0873f78a2c0f02f27",
            "owner_id": "403053754364",
            "tags": {
              "Name": "igw-jenkins"
            },
            "vpc_id": "vpc-039b4f154ce5ff4c7"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0873f78a2c0f02f27",
            "id": "r-rtb-0f60e7893679d55861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f60e7893679d5586",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_default_route_table.public",
            "aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403053754364:security-group/sg-09824ce9e4ddb424d",
            "description": "Allow ssh,icmp and access to jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09824ce9e4ddb424d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20200706193204753000000001",
            "name_prefix": null,
            "owner_id": "403053754364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-039b4f154ce5ff4c7"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403053754364:subnet/subnet-0e510fac63a2394b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e510fac63a2394b7",
            "map_public_ip_on_launch": true,
            "owner_id": "403053754364",
            "tags": {
              "Name": "sn-jenkins"
            },
            "vpc_id": "vpc-039b4f154ce5ff4c7"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403053754364:vpc/vpc-039b4f154ce5ff4c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4514900e48dc9b2",
            "default_route_table_id": "rtb-0f60e7893679d5586",
            "default_security_group_id": "sg-0620937544eb7c8fc",
            "dhcp_options_id": "dopt-706de30a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-039b4f154ce5ff4c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f60e7893679d5586",
            "owner_id": "403053754364",
            "tags": {
              "Name": "vpc-jenkins"
            }
          }
        }
      ]
    }
  ]
}